data/derived/sp14/progs/unify/prog3699.ml.out
Characters 29-37:
  let fixpoint (f,b) = wwhile (f b <> b,b);;
                               ^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
